--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
     <title>Etch a Sketch</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="credits">
-        <img src="images/etch-a-sketch-image.png" alt="etch a sketch logo" style="width:125px;height:100px;">
-        Gabriel Valle
-        <a href="https://github.com/GabrielBRQ"><img src="images/github-logo.png" alt="github logo" style="width:32px;height:32px;"></a>
-        <img src="images/etch-a-sketch-image.png" alt="etch a sketch logo" style="width:125px;height:100px;">
+        <img src="images/etch-a-sketch-online-logo.png" alt="etch a sketch logo" style="width:150px;height:75px;">
+        
+        <a href="https://github.com/GabrielBRQ">Gabriel Valle <img src="images/github-logo.png" alt="github logo" style="width:40px;height:40px;"></a>
     </div>
        
     <div id="container">
@@ -20,9 +19,10 @@
     </div> 
 
     <div id="buttonContainer"> 
-        <button id="rainbowButton">Rainbow mode</button>
-        <button id="gridButton">Change size</button>
-        <button id="clearButton">Clear</button>
+        <button id="gridButton"><img src="images/resolution.png" alt="resolution icon" style="width:25px;height:25px;">Change pixels</button>
+        <button id="eraserButton"><img src="images/eraser.png" alt="eraser icon" style="width:25px;height:25px;">Eraser tool</button>
+        <button id="clearButton"><img src="images/closed.png" alt="clear icon" style="width:25px;height:25px;">Clear screen</button>
+        <button id="rainbowButton"><img src="images/rainbow.png" alt="rainbow" style="width:25px;height:25px;">Rainbow mode<img src="images/rainbow.png" alt="rainbow" style="width:25px;height:25px;"></button>
     </div>
     <script src="script.js">  </script>
 </body>
