--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,23 +8,30 @@
     <title>Etch a Sketch</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="credits">
         <img src="images/etch-a-sketch-online-logo.png" alt="etch a sketch logo" style="width:150px;height:75px;">
-        
-        <a href="https://github.com/GabrielBRQ">Gabriel Valle <img src="images/github-logo.png" alt="github logo" style="width:40px;height:40px;"></a>
+
+        <a href="https://github.com/GabrielBRQ">Gabriel Valle <img src="images/github-logo.png" alt="github logo"
+                style="width:40px;height:40px;"></a>
     </div>
-       
+
     <div id="container">
 
-    </div> 
+    </div>
 
-    <div id="buttonContainer"> 
-        <button id="gridButton"><img src="images/resolution.png" alt="resolution icon" style="width:25px;height:25px;">Change pixels</button>
-        <button id="eraserButton"><img src="images/eraser.png" alt="eraser icon" style="width:25px;height:25px;">Eraser tool</button>
-        <button id="clearButton"><img src="images/closed.png" alt="clear icon" style="width:25px;height:25px;">Clear screen</button>
-        <button id="rainbowButton"><img src="images/rainbow.png" alt="rainbow" style="width:25px;height:25px;">Rainbow mode<img src="images/rainbow.png" alt="rainbow" style="width:25px;height:25px;"></button>
+    <div id="buttonContainer">
+        <button id="gridButton"><img src="images/resolution.png" alt="resolution icon"
+                style="width:25px;height:25px;">Change pixels</button>
+        <button id="eraserButton"><img src="images/eraser.png" alt="eraser icon" style="width:25px;height:25px;">Eraser
+            tool</button>
+        <button id="clearButton"><img src="images/closed.png" alt="clear icon" style="width:25px;height:25px;">Clear
+            screen</button>
+        <button id="rainbowButton"><img src="images/rainbow.png" alt="rainbow" style="width:25px;height:25px;">Rainbow
+            mode<img src="images/rainbow.png" alt="rainbow" style="width:25px;height:25px;"></button>
     </div>
     <script src="script.js">  </script>
 </body>
+
 </html>
