add github link color

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="credits">
         <img src="images/etch-a-sketch-online-logo.png" alt="etch a sketch logo" style="width:150px;height:75px;">
 
-        <a href="https://github.com/GabrielBRQ">Gabriel Valle <img src="images/github-logo.png" alt="github logo"
+        <a href="https://github.com/GabrielBRQ">Gabriel Valle <img src="images/github.png" alt="github logo"
                 style="width:40px;height:40px;"></a>
     </div>
 
